--- a/index.html
+++ b/index.html
@@ -25,22 +25,12 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/selfie.jpg" class="auth-image" alt="Your Name">
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sollicitudin faucibus odio, vel convallis sem sodales vitae. Aenean maximus lacus eu varius tristique.</p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sollicitudin faucibus odio, vel convallis sem sodales vitae. Aenean maximus lacus eu varius tristiqu.</p>
 
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="https://github.com/Bhoward19"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="http://linkedin.com"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/9780556/branden-howard"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
     </section>
   </div>
 
